--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "client": "set PORT=3001 && react-scripts start",
     "server": "node server.js",
-    "build": "react-scripts build",
+    "build": "cross-env DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "start:prod": "node server.js",
     "build:prod": "npm run build && npm run start:prod",
     "test": "react-scripts test",
@@ -53,6 +53,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
   }
