--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "build:prod": "npm run build && npm run start:prod",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "railway:start": "node server.js"
   },
   "proxy": "http://localhost:3000",
   "eslintConfig": {
