--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.3",
     "multer": "^1.4.4",
+    "node-cron": "^4.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
