--- a/env.example
+++ b/env.example
@@ -1,17 +1,52 @@
+# ============================================
+# COMPLETE ENVIRONMENT VARIABLES CONFIGURATION
+# ============================================
+# Copy this file to .env and fill in your actual values
+# NEVER commit .env file to Git!
+
+# ============================================
+# REQUIRED: Database Configuration (Supabase)
+# ============================================
+# Get these from: Supabase Dashboard → Settings → API
 SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
-JWT_SECRET_KEY=change-this-in-production
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
-# Frontend: set only when deploying frontend separately from backend
-# REACT_APP_API_URL=https://your-backend-domain.com/api
+# ============================================
+# REQUIRED: Server Configuration
+# ============================================
+# Port number (default: 3000 for local, Railway uses 3000, Render uses 10000)
+PORT=3000
 
-# Digi Portal Integration - Automatic Status Sync
+# Environment (development or production)
+NODE_ENV=development
+
+# ============================================
+# REQUIRED: Authentication (JWT)
+# ============================================
+# Generate a strong secret key at: https://randomkeygen.com
+# Minimum 32 characters recommended
+JWT_SECRET_KEY=change-this-to-a-very-secret-key-minimum-32-characters-long
+
+# ============================================
+# OPTIONAL: Frontend API URL
+# ============================================
+# Only set if frontend is deployed separately from backend
+# For Railway: https://your-app-name.up.railway.app/api
+# For local development: http://localhost:3000/api
+REACT_APP_API_URL=http://localhost:3000/api
+
+# ============================================
+# OPTIONAL: Digi Portal Integration
+# ============================================
 # Enable automatic sync from Digi portal (set to 'true' to enable)
 DIGI_PORTAL_AUTO_SYNC_ENABLED=false
 
 # Cron schedule for automatic sync (default: every 15 minutes)
 # Format: minute hour day month weekday
-# Examples: '*/15 * * * *' (every 15 min), '*/30 * * * *' (every 30 min), '0 */1 * * *' (every hour)
+# Examples: 
+#   '*/15 * * * *' (every 15 min)
+#   '*/30 * * * *' (every 30 min)
+#   '0 */1 * * *' (every hour)
 DIGI_PORTAL_SYNC_SCHEDULE=*/15 * * * *
 
 # Digi Portal Base URL
@@ -24,4 +59,14 @@ DIGI_PORTAL_PASSWORD=your-password
 # Digi Portal Credentials - Ahsan Seller (separate login)
 DIGI_PORTAL_AHSAN_USERNAME=ahsan-username
 DIGI_PORTAL_AHSAN_PASSWORD=ahsan-password
+
+# ============================================
+# QUICK SETUP GUIDE
+# ============================================
+# 1. Copy this file: cp env.example .env
+# 2. Fill in SUPABASE_URL and SUPABASE_SERVICE_ROLE_KEY from Supabase
+# 3. Generate JWT_SECRET_KEY at https://randomkeygen.com
+# 4. Set PORT (3000 for local, Railway uses 3000 automatically)
+# 5. Restart server: npm run server
+# ============================================
 
